--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,11 @@
 
 <div class="text-center">
     <h1 class="display-4">qwe</h1>
+    <h1>qwe1</h1>
+    <h1>qwe2</h1>
+    <h1>qwe3</h1>
+    <h1>qwe4</h1>
+    <h1>qwe5</h1>
+    <h1>qwe6</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
