--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,5 +10,8 @@
     <h1>qwe4</h1>
     <h1>qwe5</h1>
     <h1>qwe6</h1>
+    <h1>qwe7</h1>
+    <h1>qwe8</h1>
+    <h1>qwe9</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
