h1 etiketi ile merhaba metini eklendi

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<h1>Merhaba Kaan</h1>
 <div class="text-center">
     <h1 class="display-4">qwe</h1>
     <h1>qwe1</h1>
